# gen/http/decolar/server/server.go
@@ -19,9 +19,10 @@ import (
 
 // Server lists the decolar service endpoint HTTP handlers.
 type Server struct {
-	Mounts         []*MountPoint
-	CreatePais     http.Handler
-	CreateCompania http.Handler
+	Mounts          []*MountPoint
+	CreatePais      http.Handler
+	CreateCompania  http.Handler
+	CreateAeroporto http.Handler
 }
 
 // ErrorNamer is an interface implemented by generated error structs that
@@ -59,9 +60,11 @@ func New(
 		Mounts: []*MountPoint{
 			{"CreatePais", "POST", "/pais"},
 			{"CreateCompania", "POST", "/compania"},
+			{"CreateAeroporto", "POST", "/aeroporto"},
 		},
-		CreatePais:     NewCreatePaisHandler(e.CreatePais, mux, decoder, encoder, errhandler, formatter),
-		CreateCompania: NewCreateCompaniaHandler(e.CreateCompania, mux, decoder, encoder, errhandler, formatter),
+		CreatePais:      NewCreatePaisHandler(e.CreatePais, mux, decoder, encoder, errhandler, formatter),
+		CreateCompania:  NewCreateCompaniaHandler(e.CreateCompania, mux, decoder, encoder, errhandler, formatter),
+		CreateAeroporto: NewCreateAeroportoHandler(e.CreateAeroporto, mux, decoder, encoder, errhandler, formatter),
 	}
 }
 
@@ -72,12 +75,14 @@ func (s *Server) Service() string { return "decolar" }
 func (s *Server) Use(m func(http.Handler) http.Handler) {
 	s.CreatePais = m(s.CreatePais)
 	s.CreateCompania = m(s.CreateCompania)
+	s.CreateAeroporto = m(s.CreateAeroporto)
 }
 
 // Mount configures the mux to serve the decolar endpoints.
 func Mount(mux goahttp.Muxer, h *Server) {
 	MountCreatePaisHandler(mux, h.CreatePais)
 	MountCreateCompaniaHandler(mux, h.CreateCompania)
+	MountCreateAeroportoHandler(mux, h.CreateAeroporto)
 }
 
 // MountCreatePaisHandler configures the mux to serve the "decolar" service
@@ -161,6 +166,57 @@ func NewCreateCompaniaHandler(
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
 		ctx = context.WithValue(ctx, goa.MethodKey, "create_compania")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "decolar")
+		payload, err := decodeRequest(r)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		res, err := endpoint(ctx, payload)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		if err := encodeResponse(ctx, w, res); err != nil {
+			errhandler(ctx, w, err)
+		}
+	})
+}
+
+// MountCreateAeroportoHandler configures the mux to serve the "decolar"
+// service "create_aeroporto" endpoint.
+func MountCreateAeroportoHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := h.(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("POST", "/aeroporto", f)
+}
+
+// NewCreateAeroportoHandler creates a HTTP handler which loads the HTTP
+// request and calls the "decolar" service "create_aeroporto" endpoint.
+func NewCreateAeroportoHandler(
+	endpoint endpoint.Endpoint,
+	mux goahttp.Muxer,
+	decoder func(*http.Request) goahttp.Decoder,
+	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	errhandler func(context.Context, http.ResponseWriter, error),
+	formatter func(err error) goahttp.Statuser,
+) http.Handler {
+	var (
+		decodeRequest  = DecodeCreateAeroportoRequest(mux, decoder)
+		encodeResponse = EncodeCreateAeroportoResponse(encoder)
+		encodeError    = EncodeCreateAeroportoError(encoder, formatter)
+	)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
+		ctx = context.WithValue(ctx, goa.MethodKey, "create_aeroporto")
 		ctx = context.WithValue(ctx, goa.ServiceKey, "decolar")
 		payload, err := decodeRequest(r)
 		if err != nil {
