# gen/http/decolar/server/types.go
@@ -27,6 +27,13 @@ type CreateCompaniaRequestBody struct {
 	PaisID *string `form:"pais_id,omitempty" json:"pais_id,omitempty" xml:"pais_id,omitempty"`
 }
 
+// CreateAeroportoRequestBody is the type of the "decolar" service
+// "create_aeroporto" endpoint HTTP request body.
+type CreateAeroportoRequestBody struct {
+	Nome   *string `form:"nome,omitempty" json:"nome,omitempty" xml:"nome,omitempty"`
+	PaisID *string `form:"pais_id,omitempty" json:"pais_id,omitempty" xml:"pais_id,omitempty"`
+}
+
 // CreatePaisResponseBody is the type of the "decolar" service "create_pais"
 // endpoint HTTP response body.
 type CreatePaisResponseBody struct {
@@ -37,6 +44,15 @@ type CreatePaisResponseBody struct {
 // CreateCompaniaResponseBody is the type of the "decolar" service
 // "create_compania" endpoint HTTP response body.
 type CreateCompaniaResponseBody struct {
+	ID        string `form:"id" json:"id" xml:"id"`
+	Nome      string `form:"nome" json:"nome" xml:"nome"`
+	PaisID    string `form:"pais_id" json:"pais_id" xml:"pais_id"`
+	CreatedAt string `form:"created_at" json:"created_at" xml:"created_at"`
+}
+
+// CreateAeroportoResponseBody is the type of the "decolar" service
+// "create_aeroporto" endpoint HTTP response body.
+type CreateAeroportoResponseBody struct {
 	ID        string `form:"id" json:"id" xml:"id"`
 	Nome      string `form:"nome" json:"nome" xml:"nome"`
 	PaisID    string `form:"pais_id" json:"pais_id" xml:"pais_id"`
@@ -79,6 +95,25 @@ type CreateCompaniaInvalidFieldsResponseBody struct {
 	Fault bool `form:"fault" json:"fault" xml:"fault"`
 }
 
+// CreateAeroportoInvalidFieldsResponseBody is the type of the "decolar"
+// service "create_aeroporto" endpoint HTTP response body for the
+// "invalid_fields" error.
+type CreateAeroportoInvalidFieldsResponseBody struct {
+	// Name is the name of this class of errors.
+	Name string `form:"name" json:"name" xml:"name"`
+	// ID is a unique identifier for this particular occurrence of the problem.
+	ID string `form:"id" json:"id" xml:"id"`
+	// Message is a human-readable explanation specific to this occurrence of the
+	// problem.
+	Message string `form:"message" json:"message" xml:"message"`
+	// Is the error temporary?
+	Temporary bool `form:"temporary" json:"temporary" xml:"temporary"`
+	// Is the error a timeout?
+	Timeout bool `form:"timeout" json:"timeout" xml:"timeout"`
+	// Is the error a server-side fault?
+	Fault bool `form:"fault" json:"fault" xml:"fault"`
+}
+
 // NewCreatePaisResponseBody builds the HTTP response body from the result of
 // the "create_pais" endpoint of the "decolar" service.
 func NewCreatePaisResponseBody(res *decolar.PaisDTO) *CreatePaisResponseBody {
@@ -93,6 +128,18 @@ func NewCreatePaisResponseBody(res *decolar.PaisDTO) *CreatePaisResponseBody {
 // of the "create_compania" endpoint of the "decolar" service.
 func NewCreateCompaniaResponseBody(res *decolar.CompaniaDTO) *CreateCompaniaResponseBody {
 	body := &CreateCompaniaResponseBody{
+		ID:        res.ID,
+		Nome:      res.Nome,
+		PaisID:    res.PaisID,
+		CreatedAt: res.CreatedAt,
+	}
+	return body
+}
+
+// NewCreateAeroportoResponseBody builds the HTTP response body from the result
+// of the "create_aeroporto" endpoint of the "decolar" service.
+func NewCreateAeroportoResponseBody(res *decolar.AeroportoDTO) *CreateAeroportoResponseBody {
+	body := &CreateAeroportoResponseBody{
 		ID:        res.ID,
 		Nome:      res.Nome,
 		PaisID:    res.PaisID,
@@ -129,6 +176,20 @@ func NewCreateCompaniaInvalidFieldsResponseBody(res *goa.ServiceError) *CreateCo
 	return body
 }
 
+// NewCreateAeroportoInvalidFieldsResponseBody builds the HTTP response body
+// from the result of the "create_aeroporto" endpoint of the "decolar" service.
+func NewCreateAeroportoInvalidFieldsResponseBody(res *goa.ServiceError) *CreateAeroportoInvalidFieldsResponseBody {
+	body := &CreateAeroportoInvalidFieldsResponseBody{
+		Name:      res.Name,
+		ID:        res.ID,
+		Message:   res.Message,
+		Temporary: res.Temporary,
+		Timeout:   res.Timeout,
+		Fault:     res.Fault,
+	}
+	return body
+}
+
 // NewCreatePaisDTO builds a decolar service create_pais endpoint payload.
 func NewCreatePaisDTO(body *CreatePaisRequestBody) *decolar.CreatePaisDTO {
 	v := &decolar.CreatePaisDTO{
@@ -149,6 +210,17 @@ func NewCreateCompaniaDTO(body *CreateCompaniaRequestBody) *decolar.CreateCompan
 	return v
 }
 
+// NewCreateAeroportoDTO builds a decolar service create_aeroporto endpoint
+// payload.
+func NewCreateAeroportoDTO(body *CreateAeroportoRequestBody) *decolar.CreateAeroportoDTO {
+	v := &decolar.CreateAeroportoDTO{
+		Nome:   *body.Nome,
+		PaisID: *body.PaisID,
+	}
+
+	return v
+}
+
 // ValidateCreatePaisRequestBody runs the validations defined on
 // create_pais_request_body
 func ValidateCreatePaisRequestBody(body *CreatePaisRequestBody) (err error) {
@@ -161,6 +233,26 @@ func ValidateCreatePaisRequestBody(body *CreatePaisRequestBody) (err error) {
 // ValidateCreateCompaniaRequestBody runs the validations defined on
 // create_compania_request_body
 func ValidateCreateCompaniaRequestBody(body *CreateCompaniaRequestBody) (err error) {
+	if body.Nome == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("nome", "body"))
+	}
+	if body.PaisID == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("pais_id", "body"))
+	}
+	if body.Nome != nil {
+		if utf8.RuneCountInString(*body.Nome) < 1 {
+			err = goa.MergeErrors(err, goa.InvalidLengthError("body.nome", *body.Nome, utf8.RuneCountInString(*body.Nome), 1, true))
+		}
+	}
+	if body.PaisID != nil {
+		err = goa.MergeErrors(err, goa.ValidateFormat("body.pais_id", *body.PaisID, goa.FormatUUID))
+	}
+	return
+}
+
+// ValidateCreateAeroportoRequestBody runs the validations defined on
+// create_aeroporto_request_body
+func ValidateCreateAeroportoRequestBody(body *CreateAeroportoRequestBody) (err error) {
 	if body.Nome == nil {
 		err = goa.MergeErrors(err, goa.MissingFieldError("nome", "body"))
 	}
